--- a/app/views/health_providers/index.html.haml
+++ b/app/views/health_providers/index.html.haml
@@ -31,6 +31,7 @@
         %td= health_provider.zipcode
         %td= health_provider.hospital_referral_region_description
 
+  =# link_to t('.new', :default => t("helpers.links.new")), new_health_provider_path, :class => 'btn btn-primary'
 - if false
   = link_to t('.new', :default => t("helpers.links.new")), new_health_provider_path, :class => 'btn btn-primary'
   %hr
