--- a/app/views/health_providers/_inpatient_procedures.html.haml
+++ b/app/views/health_providers/_inpatient_procedures.html.haml
@@ -1,15 +1,15 @@
-%table.table.table-striped{"data-provides" => "rowlink"}
+%table.table.table-striped.sortable{"data-provides" => "rowlink"}
   %thead
     %tr
       %th{:style => 'display:none;'}= "Action"
       %th= "Procedure"
-      %th= "Provider Charge"
+      %th= simple_sortable 'average_covered_charges', 'Provider Charge'
       %th= "#{@health_provider.state_name} Average Charge"
       %th= "National Average Charge"
-      %th= "Provider Paid"
-      %th= "#{@health_provider.state_name} Average Paid"
-      %th= "National Average Paid"
-      %th= "Total Discharges"
+      %th= simple_sortable 'average_total_payments', 'Provider Payment'
+      %th= "#{@health_provider.state_name} Average Payments"
+      %th= "National Average Payments"
+      %th= simple_sortable 'total_discharges', 'Total Discharges'
   %tbody
     - @provider_inpatient_procedures.each do |provider_inpatient_procedure|
       %tr
