--- a/app/views/inpatient_procedures/_providers.html.haml
+++ b/app/views/inpatient_procedures/_providers.html.haml
@@ -10,7 +10,7 @@
   %tbody
     - @paginated_provider_inpatient_procedures.each do |provider_inpatient_procedure|
       %tr
-        %td{:style => 'display:none;'}= link_to "Show", provider_inpatient_procedure_path(provider_inpatient_procedure)
+        %td{:style => 'display:none;'}= link_to "Show", health_provider_path(provider_inpatient_procedure.health_provider)
         %td= provider_inpatient_procedure.provider_name
         %td= number_to_currency(provider_inpatient_procedure.average_covered_charges, :precision => 0)
         %td= number_to_currency(provider_inpatient_procedure.average_total_payments, :precision => 0)
