--- a/app/views/outpatient_procedures/_graphs.html.haml
+++ b/app/views/outpatient_procedures/_graphs.html.haml
@@ -12,93 +12,58 @@
       %hr{:style => "border: 1px solid lightgrey; margin-top:0px;"}
 .row-fluid
   .span4
-    %h5 Charges by Hospital
-    .muted
-      %p
-        %strong High:
-        = number_to_currency(@high_charge_provider_outpatient_procedure.average_estimated_submitted_charges, :precision => 0)
-        %br
-        = link_to truncate(@high_charge_provider_outpatient_procedure.provider_name, :length => 30), provider_outpatient_procedure_path(@high_charge_provider_outpatient_procedure)
-      %p
-        %strong Low:
-        = number_to_currency(@low_charge_provider_outpatient_procedure.average_estimated_submitted_charges, :precision => 0)
-        %br
-        = link_to truncate(@low_charge_provider_outpatient_procedure.provider_name, :length => 30), provider_outpatient_procedure_path(@low_charge_provider_outpatient_procedure)
+    %h5 
+      Charges by Hospital
+      %a{:class => 'btn btn-mini popup', :href => nil, 'data-toggle' => "popover", 'data-placement' => "top", 'data-content' => "#{number_to_currency(@high_charge_provider_outpatient_procedure.average_estimated_submitted_charges, :precision => 0)}", :title => "#{link_to truncate(@high_charge_provider_outpatient_procedure.provider_name, :length => 30), provider_outpatient_procedure_path(@high_charge_provider_outpatient_procedure)}"}
+        = "High"
+      %a{:class => 'btn btn-mini popup', :href => nil, 'data-toggle' => "popover", 'data-placement' => "top", 'data-content' => "#{number_to_currency(@low_charge_provider_outpatient_procedure.average_estimated_submitted_charges, :precision => 0)}", :title => "#{link_to truncate(@low_charge_provider_outpatient_procedure.provider_name, :length => 30), provider_outpatient_procedure_path(@low_charge_provider_outpatient_procedure)}"}
+        = "Low"
     = content_tag :div, "", id: "national_outpatient_procedure_submitted_charges_graph", data: {procedures: outpatient_procedure_submitted_charges_data(@provider_outpatient_procedures)}
 
   .span4
-    %h5 Payments by Hospital
-    .muted
-      %p
-        %strong High:
-        = number_to_currency(@high_payment_provider_outpatient_procedure.average_total_payments, :precision => 0)
-        %br
-        = link_to truncate(@high_payment_provider_outpatient_procedure.provider_name, :length => 30), provider_outpatient_procedure_path(@high_payment_provider_outpatient_procedure)
-      %p
-        %strong Low:
-        = number_to_currency(@low_payment_provider_outpatient_procedure.average_total_payments, :precision => 0)
-        %br
-        = link_to truncate(@low_payment_provider_outpatient_procedure.provider_name, :length => 30), provider_outpatient_procedure_path(@low_payment_provider_outpatient_procedure)
+    %h5 
+      Payments by Hospital
+      %a{:class => 'btn btn-mini popup', :href => nil, 'data-toggle' => "popover", 'data-placement' => "top", 'data-content' => "#{number_to_currency(@high_payment_provider_outpatient_procedure.average_total_payments, :precision => 0)}", :title => "#{link_to truncate(@high_payment_provider_outpatient_procedure.provider_name, :length => 30), provider_outpatient_procedure_path(@high_payment_provider_outpatient_procedure)}"}
+        = "High"
+      %a{:class => 'btn btn-mini popup', :href => nil, 'data-toggle' => "popover", 'data-placement' => "top", 'data-content' => "#{number_to_currency(@low_payment_provider_outpatient_procedure.average_total_payments, :precision => 0)}", :title => "#{link_to truncate(@low_payment_provider_outpatient_procedure.provider_name, :length => 30), provider_outpatient_procedure_path(@low_payment_provider_outpatient_procedure)}"}
+        = "Low"
     = content_tag :div, "", id: "national_outpatient_procedure_total_payments_graph", data: {procedures: outpatient_procedure_total_payments_data(@provider_outpatient_procedures)}
 
   .span4
-    %h5 Services by Hospital
-    .muted
-      %p
-        %strong High:
-        = @high_services_provider_outpatient_procedure.outpatient_services
-        %br
-        = link_to truncate(@high_services_provider_outpatient_procedure.provider_name, :length => 30), provider_outpatient_procedure_path(@high_services_provider_outpatient_procedure)
-      %p
-        %strong Low:
-        = @low_services_provider_outpatient_procedure.outpatient_services
-        %br
-        = link_to truncate(@low_services_provider_outpatient_procedure.provider_name, :length => 30), provider_outpatient_procedure_path(@low_services_provider_outpatient_procedure)
+    %h5 
+      Services by Hospital
+      %a{:class => 'btn btn-mini popup', :href => nil, 'data-toggle' => "popover", 'data-placement' => "top", 'data-content' => "#{@high_services_provider_outpatient_procedure.outpatient_services}", :title => "#{link_to truncate(@high_services_provider_outpatient_procedure.provider_name, :length => 30), provider_outpatient_procedure_path(@high_services_provider_outpatient_procedure)}"}
+        = "High"
+      %a{:class => 'btn btn-mini popup', :href => nil, 'data-toggle' => "popover", 'data-placement' => "top", 'data-content' => "#{@low_services_provider_outpatient_procedure.outpatient_services}", :title => "#{link_to truncate(@low_services_provider_outpatient_procedure.provider_name, :length => 30), provider_outpatient_procedure_path(@low_services_provider_outpatient_procedure)}"}
+        = "Low"
     = content_tag :div, "", id: "national_provider_outpatient_procedure_services_graph", data: {procedures: national_provider_outpatient_procedure_services_data(@provider_outpatient_procedures)}
 .row-fluid
   .span4
-    %h5 Charges by State
-    .muted
-      %p
-        %strong High:
-        = number_to_currency(@high_charge_state_outpatient_procedure.average_estimated_submitted_charges, :precision => 0)
-        %br
-        = link_to @high_charge_state_outpatient_procedure.state_name, state_outpatient_procedure_path(@high_charge_state_outpatient_procedure)
-      %p
-        %strong Low:
-        = number_to_currency(@low_charge_state_outpatient_procedure.average_estimated_submitted_charges, :precision => 0)
-        %br
-        = link_to @low_charge_state_outpatient_procedure.state_name, state_outpatient_procedure_path(@low_charge_state_outpatient_procedure)
+    %h5 
+      Charges by State
+      %a{:class => 'btn btn-mini popup', :href => nil, 'data-toggle' => "popover", 'data-placement' => "top", 'data-content' => "#{number_to_currency(@high_charge_state_outpatient_procedure.average_estimated_submitted_charges, :precision => 0)}", :title => "#{link_to @high_charge_state_outpatient_procedure.state_name, state_outpatient_procedure_path(@high_charge_state_outpatient_procedure)}"}
+        = "High"
+      %a{:class => 'btn btn-mini popup', :href => nil, 'data-toggle' => "popover", 'data-placement' => "top", 'data-content' => "#{number_to_currency(@low_charge_state_outpatient_procedure.average_estimated_submitted_charges, :precision => 0)}", :title => "#{link_to @low_charge_state_outpatient_procedure.state_name, state_outpatient_procedure_path(@low_charge_state_outpatient_procedure)}"}
+        = "Low"
     = content_tag :div, "", id: "national_state_outpatient_procedure_submitted_charges_graph", data: {procedures: national_state_outpatient_procedure_submitted_charges_data(@state_outpatient_procedures)}
 
   .span4
-    %h5 Payments by State
-    .muted
-      %p
-        %strong High:
-        = number_to_currency(@high_payment_state_outpatient_procedure.average_total_payments, :precision => 0)
-        %br
-        = link_to @high_payment_state_outpatient_procedure.state_name, state_outpatient_procedure_path(@high_payment_state_outpatient_procedure)
-      %p
-        %strong Low:
-        = number_to_currency(@low_payment_state_outpatient_procedure.average_total_payments, :precision => 0)
-        %br
-        = link_to @low_payment_state_outpatient_procedure.state_name, state_outpatient_procedure_path(@low_payment_state_outpatient_procedure)
+    %h5 
+      Payments by State
+      %a{:class => 'btn btn-mini popup', :href => nil, 'data-toggle' => "popover", 'data-placement' => "top", 'data-content' => "#{number_to_currency(@high_payment_state_outpatient_procedure.average_total_payments, :precision => 0)}", :title => "#{link_to @high_payment_state_outpatient_procedure.state_name, state_outpatient_procedure_path(@high_payment_state_outpatient_procedure)}"}
+        = "High"
+      %a{:class => 'btn btn-mini popup', :href => nil, 'data-toggle' => "popover", 'data-placement' => "top", 'data-content' => "#{number_to_currency(@low_payment_state_outpatient_procedure.average_total_payments, :precision => 0)}", :title => "#{link_to @low_payment_state_outpatient_procedure.state_name, state_outpatient_procedure_path(@low_payment_state_outpatient_procedure)}"}
+        = "Low"
     = content_tag :div, "", id: "national_state_outpatient_procedure_total_payments_graph", data: {procedures: national_state_outpatient_procedure_total_payments_data(@state_outpatient_procedures)}
 
-
   .span4
-    %h5 Services by State
-    .muted
-      %p
-        %strong High:
-        = @high_services_state_outpatient_procedure.outpatient_services
-        %br
-        = link_to @high_services_state_outpatient_procedure.state_name, state_outpatient_procedure_path(@high_services_state_outpatient_procedure)
-      %p
-        %strong Low:
-        = @low_services_state_outpatient_procedure.outpatient_services
-        %br
-        = link_to @low_services_state_outpatient_procedure.state_name, state_outpatient_procedure_path(@low_services_state_outpatient_procedure)
-      = content_tag :div, "", id: "national_state_outpatient_procedure_services_graph", data: {procedures: national_state_outpatient_procedure_services_data(@state_outpatient_procedures)}
+    %h5 
+      Services by State
+      %a{:class => 'btn btn-mini popup', :href => nil, 'data-toggle' => "popover", 'data-placement' => "top", 'data-content' => "#{@high_services_state_outpatient_procedure.outpatient_services}", :title => "#{link_to @high_services_state_outpatient_procedure.state_name, state_outpatient_procedure_path(@high_services_state_outpatient_procedure)}"}
+        = "High"
+      %a{:class => 'btn btn-mini popup', :href => nil, 'data-toggle' => "popover", 'data-placement' => "top", 'data-content' => "#{@low_services_state_outpatient_procedure.outpatient_services}", :title => "#{link_to @low_services_state_outpatient_procedure.state_name, state_outpatient_procedure_path(@low_services_state_outpatient_procedure)}"}
+        = "Low"
+    = content_tag :div, "", id: "national_state_outpatient_procedure_services_graph", data: {procedures: national_state_outpatient_procedure_services_data(@state_outpatient_procedures)}
 
+%script
+  $('.popup').popover({html: true})
