hospital inpatient graphs

--- a/app/views/health_providers/_outpatient_graphs.html.haml
+++ b/app/views/health_providers/_outpatient_graphs.html.haml
@@ -1,11 +1,5 @@
-.row-fluid
-  .span6
-    %h5 Outpatient Procedures Services Performed
-    = content_tag :div, "", id: "provider_outpatient_services_graph", data: {procedures: procedure_services_data(@provider_outpatient_procedures)}
-  .span6
-    %h5 Outpatient Procedures Average Submitted Charges
-    = content_tag :div, "", id: "provider_outpatient_charges_donut_graph", data: {procedures: procedure_charges_donut_data(@provider_outpatient_procedures)}
-.row-fluid
+
+.row-fluid.well
   .span6
     %h5= "Outpatient Procedures Average Submitted Charges"
     = content_tag :div, "", id: "provider_outpatient_procedure_graph", data: {procedures: procedure_data(@provider_outpatient_procedures)}
@@ -13,3 +7,11 @@
   .span6
     %h5= "Outpatient Procedures Average Total Payments"
     = content_tag :div, "", id: "provider_outpatient_procedure_payment_graph", data: {procedures: procedure_payment_data(@provider_outpatient_procedures)}
+
+.row-fluid.well
+  .span6
+    %h5 Outpatient Procedures Services Performed
+    = content_tag :div, "", id: "provider_outpatient_services_graph", data: {procedures: procedure_services_data(@provider_outpatient_procedures)}
+  .span6
+    %h5 Outpatient Procedures Average Submitted Charges
+    = content_tag :div, "", id: "provider_outpatient_charges_donut_graph", data: {procedures: procedure_charges_donut_data(@provider_outpatient_procedures)}
